chore(display): Add shared StyledDemo component (#3874)
* add shared StyledDemo component

* add StyledDemo to truncated Pill

* implement demoStyles property on example objects

* add Context to App Launcher examples

--- a/packages/design-system/ui/components/avatar-group/docs.mdx
+++ b/packages/design-system/ui/components/avatar-group/docs.mdx
@@ -9,7 +9,7 @@ import { StandardIcon } from '../icons/standard/example';
 import * as Base from './base/example';
 import DisplayColumn from '../../../shared/components/DisplayColumn';
 import DisplayGrid from '../../../shared/components/DisplayGrid';
-import { getDisplayElementById } from '../../shared/helpers';
+import { getDisplayElementById, getDemoStylesById } from '../../shared/helpers';
 
 <div className="doc lead">
   An avatar group is an element that communicates to the user that there is more than 1 person associated to an item.
@@ -46,10 +46,8 @@ User Initials Avatars can be put into a group. In this case, on the `<abbr>` app
 #### Inversed
 Inversed User Initials Avatars can also be used in a group when on a dark background. To achieve the lighter background for the Avatar, additionally apply the `slds-avatar-grouped_inverse` class along with the `slds-avatar-grouped` class.
 
-<CodeView>
-  <Base.ContextInversed>
-    {getDisplayElementById(Base.examples, 'with-user-initials-inversed')}
-  </Base.ContextInversed>
+<CodeView style={getDemoStylesById(Base.examples, 'with-user-initials-inversed')}>
+  {getDisplayElementById(Base.examples, 'with-user-initials-inversed')}
 </CodeView>
 
 ### With Mixed Avatar types
