fix(buttons): Center text for stretch variant (#3972)
* fix(buttons): center text for stretch variant
Revert base variant to left aligned
Update tests and docs

* fix(buttons): add full width example and update docs

--- a/packages/design-system/ui/components/buttons/docs.mdx
+++ b/packages/design-system/ui/components/buttons/docs.mdx
@@ -250,8 +250,18 @@ To display the pressed state, use the class `slds-is-pressed` on the `<button>` 
 
 ## Sizing
 
+### Stretch
+
 To allow the button's width to take up the entire width available, apply the `slds-button_stretch` class to the button.
 
 <CodeView toggleCode={false}>
   {getDisplayElementById(ButtonExamples.examples, 'stretch')}
+</CodeView>
+
+### Full Width
+
+Creates a full width button with styling resets
+
+<CodeView toggleCode={false}>
+  {getDisplayElementById(ButtonExamples.examples, 'full-width')}
 </CodeView>
