--- a/packages/design-system/ui/components/button-icons/docs.mdx
+++ b/packages/design-system/ui/components/button-icons/docs.mdx
@@ -22,7 +22,7 @@ import _, { getDisplayElementById } from '../../shared/helpers';
 
 ## About Button Icons
 
-Button icons are button elements that represent their behavior with an [icon](/components/icon) instead of text.  The button itself should have the classes `slds-button` and `slds-button_icon`, while the svg icon has `slds-button__icon` on it.
+Button icons are button elements that represent their behavior with an [icon](/components/icons) instead of text.  The button itself should have the classes `slds-button` and `slds-button_icon`, while the svg icon has `slds-button__icon` on it.
 
 Some styling variations require the button to receive additional 'container' classes that remove the button styling and/or add borders. See below for more detail.
 
