--- a/packages/design-system/ui/components/input/docs.mdx
+++ b/packages/design-system/ui/components/input/docs.mdx
@@ -14,8 +14,7 @@ import { getDisplayElementById } from '../../shared/helpers';
 
 ## About Inputs
 
-You can style the HTML `<input>` element to align with the Salesforce brand
-by using the `.slds-input` class on the `<input>` element.
+You can style the HTML `<input>` element to align with the Salesforce brand by using the `.slds-input` class on the `<input>` element.
 
 The `<input>` element includes support for all HTML5 types: `text`,
 `password`, `datetime`, `datetime-local`, `date`, `month`, `time`, `week`,
@@ -129,10 +128,4 @@ By only using the traditional `label[for]` method, the fixed text is never read 
 
 <CodeView>
   {getDisplayElementById(InputExamples.examples, 'field-level-help')}
-</CodeView>
-
-### Counter
-
-<CodeView>
-  {getDisplayElementById(InputExamples.examples, 'increment-decrement-counter')}
 </CodeView>
