feat(prompt): Add non-modal variant (#3986)
* feat(prompt): Add non-modal variant

* Revert "feat(prompt): Add non-modal variant"

This reverts commit 1455016f15a17b76c083f8d96918dc697f174cac.

* feat(popover): Add prompt variant

* feat(popover): Prompt, address review feedback

* feat(popover): Prompt, add release notes & update docs

* feat(popover): Prompt, add snapshot tests

* feat(popover): Prompt, tweak docs

* feat(popover): Prompt, additional annotations

* chore(infra): Update package-lock

--- a/packages/design-system/ui/components/popovers/docs.mdx
+++ b/packages/design-system/ui/components/popovers/docs.mdx
@@ -10,6 +10,7 @@ import * as WarningExamples from './warning/example';
 import * as WalkthroughExamples from './walkthrough/example';
 import * as FeatureExamples from './feature/example';
 import * as PreviewPanelExamples from './panels/example';
+import * as PromptExamples from './prompt/example';
 import { getDisplayElementById } from '../../shared/helpers';
 
 <div className="doc lead">
@@ -283,4 +284,46 @@ This is due to the focus moving and trapping nature of non-modal dialogs. You **
 
 <CodeView>
   {PreviewPanelExamples.default}
+</CodeView>
+
+### Prompt
+
+<CodeView>
+  {PromptExamples.default}
+</CodeView>
+
+#### Positioned top left
+
+<CodeView style={{ height: '250px' }}>
+  {getDisplayElementById(PromptExamples.examples, 'top-left')}
+</CodeView>
+
+#### Positioned top center
+
+<CodeView style={{ height: '250px' }}>
+  {getDisplayElementById(PromptExamples.examples, 'top-center')}
+</CodeView>
+
+#### Positioned top right
+
+<CodeView style={{ height: '250px' }}>
+  {getDisplayElementById(PromptExamples.examples, 'top-right')}
+</CodeView>
+
+#### Positioned bottom right
+
+<CodeView style={{ height: '250px' }}>
+  {getDisplayElementById(PromptExamples.examples, 'bottom-right')}
+</CodeView>
+
+#### Positioned bottom center
+
+<CodeView style={{ height: '250px' }}>
+  {getDisplayElementById(PromptExamples.examples, 'bottom-center')}
+</CodeView>
+
+#### Positioned bottom left
+
+<CodeView style={{ height: '250px' }}>
+  {getDisplayElementById(PromptExamples.examples, 'bottom-left')}
 </CodeView>
