fix(docs): Create functioning deep linking to doc headers (#4005)
* add DocHeaderAnchor to handles deep links into doc block content

* update deep links across docs

--- a/packages/design-system/ui/components/button-icons/docs.mdx
+++ b/packages/design-system/ui/components/button-icons/docs.mdx
@@ -261,7 +261,7 @@ To create a disabled button, append the `disabled` attribute to the `<button>`.
 
 ### Error
 
-Error button icons are typically used in conjunction with an [error popover](../popovers/?variant=error).
+Error button icons are typically used in conjunction with an [error popover](../popovers/#Error).
 
 <CodeView toggleCode={false}>
   {getDisplayElementById(Base.states, "error")}
