--- a/packages/design-system/ui/components/combobox/docs.mdx
+++ b/packages/design-system/ui/components/combobox/docs.mdx
@@ -243,9 +243,9 @@ When more than one option has been selected, the value of the `input` should be 
   {getDisplayElementById(BaseExamples.states, 'selecting-multiple-options')}
 </CodeView>
 
-When a Combobox with multiple selected options is closed, a [Listbox of Pills](/components/pills?variant=listbox-of-pill-options) is also used to represent those selected options.
+When a Combobox with multiple selected options is closed, a [Listbox of Pills](/components/pills/#Listbox-Of-Pill-Options) is also used to represent those selected options.
 
-The [Listbox of Pills](/components/pills?variant=listbox-of-pill-options) is positioned below the read-only `input`, outside of the Combobox. Each pill represents a selected option. This allows a user to easily see and remove selected items from the Combobox without opening it again.
+The [Listbox of Pills](/components/pills/#Listbox-Of-Pill-Options) is positioned below the read-only `input`, outside of the Combobox. Each pill represents a selected option. This allows a user to easily see and remove selected items from the Combobox without opening it again.
 
 <CodeView>
   {getDisplayElementById(BaseExamples.states, 'selected-multiple-options-closed')}
@@ -253,9 +253,9 @@ The [Listbox of Pills](/components/pills?variant=listbox-of-pill-options) is pos
 
 #### Editing multiple selections
 
-The [Listbox of Pills](/components/pills?variant=listbox-of-pill-options) allows you to quickly remove selections without opening the Combobox by clicking the remove "x" or using your delete key.
+The [Listbox of Pills](/components/pills/#Listbox-Of-Pill-Options) allows you to quickly remove selections without opening the Combobox by clicking the remove "x" or using your delete key.
 
-The [Listbox of Pills](/components/pills?variant=listbox-of-pill-options) acts as a single focusable element. Using the arrow keys whilst focused on the first pill will cycle the user through the pill options.
+The [Listbox of Pills](/components/pills/#Listbox-Of-Pill-Options) acts as a single focusable element. Using the arrow keys whilst focused on the first pill will cycle the user through the pill options.
 
 ## Autocomplete Combobox
 
@@ -335,7 +335,7 @@ To remove the selected option, simply clear the text `input`.
 
 ### Multiple selection
 
-Multiple selection is much the same as the Base Combobox. A list of selected options are displayed below the Combobox as a [Listbox of Pills](/components/pills?variant=listbox-of-pill-options).
+Multiple selection is much the same as the Base Combobox. A list of selected options are displayed below the Combobox as a [Listbox of Pills](/components/pills/#Listbox-Of-Pill-Options).
 
 <CodeView>
   {getDisplayElementById(AutocompleteExamples.states, 'selected-multiple-options')}
@@ -344,9 +344,9 @@ Multiple selection is much the same as the Base Combobox. A list of selected opt
 
 #### Editing multiple selections
 
-The [Listbox of Pills](/components/pills?variant=listbox-of-pill-options) allows you to quickly remove selections without opening the Combobox by clicking the remove "x" or using your delete key.
+The [Listbox of Pills](/components/pills/#Listbox-Of-Pill-Options) allows you to quickly remove selections without opening the Combobox by clicking the remove "x" or using your delete key.
 
-The [Listbox of Pills](/components/pills?variant=listbox-of-pill-options) acts as a single focusable element. Using the arrow keys whilst focused on the first pill will cycle the user through the pill options.
+The [Listbox of Pills](/components/pills/#Listbox-Of-Pill-Options) acts as a single focusable element. Using the arrow keys whilst focused on the first pill will cycle the user through the pill options.
 
 ## Entity Autocomplete Combobox (Lookup)
 
@@ -409,7 +409,7 @@ To remove the selected option, simply press the `Delete` key when focused inside
 
 ### Multiple selection
 
-Multiple selection is handled the same as the Base and Autocomplete Combobox, a list of selected entities is displayed under the combobox as a [Listbox of Pills](/components/pills?variant=listbox-of-pill-options).
+Multiple selection is handled the same as the Base and Autocomplete Combobox, a list of selected entities is displayed under the combobox as a [Listbox of Pills](/components/pills/#Listbox-Of-Pill-Options).
 
 <CodeView>
   {getDisplayElementById(AutocompleteExamples.states, 'lookup-multiple-options')}
@@ -467,7 +467,7 @@ The containing `div` of the comboboxes should have the class `slds-combobox-grou
 
 When a user is not focused on any element inside of the combobox group, the pill container should become collapsed to reduce vertical space.
 
-The combobox group element needs the class `slds-has-selection` when a selection has been made. The pill selections are found inside of a [Listbox of Pills](/components/pills?variant=listbox-of-pill-options) located after the combobox group. It requires the class `slds-listbox_selection-group` to provide appropriate styling for the expanding and collapsing behavior of this region.
+The combobox group element needs the class `slds-has-selection` when a selection has been made. The pill selections are found inside of a [Listbox of Pills](/components/pills/#Listbox-Of-Pill-Options) located after the combobox group. It requires the class `slds-listbox_selection-group` to provide appropriate styling for the expanding and collapsing behavior of this region.
 
 #### Collapsed
 
