--- a/packages/design-system/ui/components/expression/docs.mdx
+++ b/packages/design-system/ui/components/expression/docs.mdx
@@ -258,7 +258,7 @@ Use the narrow variant for in-context expression building, where users are able 
 
 ### Filtering
 
-One example of in-context expression building is filtering. To see examples of filtering logic inside of a panel, checkout our [Panel](/components/panels/#Filtering-Panel) documentation
+One example of in-context expression building is filtering. To see examples of filtering logic inside of a panel, checkout our [Panel](/components/panels/#Panels-for-Filtering) documentation
 
 <Example title="Expression Builder - Filtering">
   <CodeView style={{maxWidth: '320px'}}>
