--- a/packages/design-system/ui/components/app-launcher/docs.mdx
+++ b/packages/design-system/ui/components/app-launcher/docs.mdx
@@ -42,7 +42,7 @@ On hover or focus, the more `button` will display the full desscription using a 
 
 ## Reordering tiles via drag and drop
 
-App tiles can be re-ordered via mouse drag and drop or with the keyboard via the use of the grab handle button under the avatar. The grab handle button is implemented as a [Stateful Icon Button](/components/button-icons/?variant=stateful)
+App tiles can be re-ordered via mouse drag and drop or with the keyboard via the use of the grab handle button under the avatar. The grab handle button is implemented as a [Stateful Icon Button](/components/button-icons/#Stateful)
 
 <Blockquote type="a11y" header="Communicating to assistive technology">
   When implementing drag and drop it is important to be able to communicate what is happening visually on the screen to assistive technology users. We do this via an Assertive Live Region, which is placed before the list of tiles, and has <code className="docs">aria-live="assertive"</code>
