--- a/packages/design-system/ui/components/icons/docs.mdx
+++ b/packages/design-system/ui/components/icons/docs.mdx
@@ -183,10 +183,10 @@ Place the class on the `.slds-icon_container`.
 
 Some icon names have more than one word, separated by `_` underscores. Replace underscores with dashes when composing the class name. So `log_a_call` in the standard icon set becomes `.slds-icon-action-log-a-call`.
 
-- For [action](/components/icons?variant=action) icons, add the `.slds-icon_container_circle` class to the container (`.slds-icon_container`), which changes the background shape to a circle.
-- [Doctype](/components/icons?variant=doctype) icons have no background color.
-- [Standard](/components/icons?variant=standard) and [Custom](/components/icons?variant=custom) icons have a rounded square shape and use a class on the container for the background color.
-- [Utility](/components/icons?variant=base) icons have no background color.
+- For [action](/components/icons/#Action) icons, add the `.slds-icon_container_circle` class to the container (`.slds-icon_container`), which changes the background shape to a circle.
+- [Doctype](/components/icons/#Doctype) icons have no background color.
+- [Standard](/components/icons/#Standard) and [Custom](/components/icons/#Custom) icons have a rounded square shape and use a class on the container for the background color.
+- [Utility](/components/icons/#Base) icons have no background color.
 
 ## Size
 
